--- a/retailer.html
+++ b/retailer.html
@@ -1,130 +1,146 @@
-<!DOCTYPE html>  <html lang="en">  
-<head>  
-<meta charset="UTF-8">  
-<title>Retailer Dashboard</title>  
-<meta name="viewport" content="width=device-width, initial-scale=1.0">  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">  
-<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">  <style>  
-*{box-sizing:border-box;font-family:Poppins,sans-serif}  
-body{margin:0;background:#f3f6fb}  
-.main{padding:20px}  
-  
-.icon-bar{  
- display:flex;gap:20px;justify-content:center;  
- background:#064e3b;padding:12px;border-radius:14px;  
- max-width:600px;margin:auto  
-}  
-.icon-btn{  
- background:#16a34a;color:#fff;border:none;  
- width:55px;height:55px;border-radius:50%;  
- font-size:22px;cursor:pointer  
-}  
-  
-.header{  
- margin-top:15px;background:#fff;padding:15px;  
- border-radius:12px;text-align:center;  
- box-shadow:0 5px 15px rgba(0,0,0,.08)  
-}  
-  
-.products-grid{  
- display:grid;  
- grid-template-columns:repeat(3,1fr);  
- gap:10px;margin-top:20px;  
- max-height:70vh;overflow-y:auto  
-}  
-.product-card{  
- background:#fff;padding:5px;border-radius:10px;  
- text-align:center;cursor:pointer;  
- box-shadow:0 3px 8px rgba(0,0,0,.08)  
-}  
-.product-card img{  
- width:100%;height:80px;object-fit:cover;border-radius:8px  
-}  
-.product-card h4{font-size:12px;margin:5px 0}  
-.price{font-size:12px;color:#16a34a;font-weight:600}  
-  
-.modal{  
- position:fixed;inset:0;  
- background:rgba(0,0,0,.5);  
- display:none;align-items:center;justify-content:center;  
- z-index:20  
-}  
-.modal-content{  
- background:#fff;padding:20px;  
- width:90%;max-width:500px;  
- border-radius:15px;max-height:85vh;overflow:auto;  
- position:relative  
-}  
-  
-.close-btn,.buy-btn{  
- position:absolute;top:10px;  
- width:34px;height:34px;border-radius:50%;  
- display:flex;align-items:center;justify-content:center;  
- color:#fff;cursor:pointer  
-}  
-.close-btn{right:10px;background:#ef4444}  
-.buy-btn{right:55px;background:#2563eb}  
-  
-input{  
- width:100%;padding:10px;margin:8px 0;  
- border-radius:8px;border:1px solid #ccc  
-}  
-button.primary{  
- background:#16a34a;color:#fff;border:none;  
- padding:10px 15px;border-radius:10px;cursor:pointer  
-}  
-  
-img.full{width:100%;border-radius:10px;margin:10px 0}  
-  
-.order-status{  
- background:#f8fafc;padding:10px;border-radius:10px;margin-top:10px  
-}  
-.step{  
- font-size:12px;color:#999;margin:2px 0  
-}  
-.step.active{  
- color:#16a34a;font-weight:600  
-}  
-</style>  </head>  <body>  
-<div class="main">  <div class="icon-bar">  
- <button class="icon-btn" onclick="loadProducts()"><i class="bi bi-search"></i></button>  
- <button class="icon-btn" onclick="openOrders()"><i class="bi bi-bag-check"></i></button>  
-</div>  <div class="header">  
- <h3>Retailer Dashboard</h3>  
-</div>  <div class="header">  
- <input id="wid" placeholder="Enter Wholesaler ID (eg: W001)">  
- <button class="primary" onclick="loadProducts()">Search</button>  
-</div>  <div class="products-grid" id="products"></div>  </div>  <!-- DETAIL -->  <div class="modal" id="detailModal">  
-<div class="modal-content">  
- <div class="close-btn" onclick="closeAll()">✕</div>  
- <div class="buy-btn" onclick="openPayment()"><i class="bi bi-cart-plus"></i></div>   <h3 id="dName"></h3>  
- <img id="dImg" class="full">  
- <p id="dPrice" class="price"></p>  
- <p id="dDetail"></p>   <hr>  
- <p><b>Shop:</b> <span id="dShop"></span></p>  
- <p><b>Address:</b> <span id="dAddress"></span></p>  
- <p><b>Mobile / UPI:</b> <span id="dMobile"></span></p>  
-</div>  
-</div>  <!-- PAYMENT -->  <div class="modal" id="payModal">  
-<div class="modal-content">  
- <h3>Payment & Proof</h3>   <p><b>Shop:</b> <span id="pShop"></span></p>  
- <p><b>UPI / Mobile:</b> <span id="pMobile"></span></p>   <img id="pImg" class="full">   <input id="rName" placeholder="Retailer Name">  
- <input id="rMobile" placeholder="Retailer Mobile">  
- <input id="txn" placeholder="Transaction ID">  
- <input id="proof" type="file" accept="image/*">  <button type="button" class="primary" onclick="submitOrder()">Submit Order</button>
-<button type="button" onclick="closeAll()">Cancel</button>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Retailer Dashboard</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
+<style>
+*{box-sizing:border-box;font-family:Poppins,sans-serif}
+body{margin:0;background:#f3f6fb}
+.main{padding:20px}
+.icon-bar{
+ display:flex;gap:20px;justify-content:center;
+ background:#064e3b;padding:12px;border-radius:14px;
+ max-width:600px;margin:auto
+}
+.icon-btn{
+ background:#16a34a;color:#fff;border:none;
+ width:55px;height:55px;border-radius:50%;
+ font-size:22px;cursor:pointer
+}
+.header{
+ margin-top:15px;background:#fff;padding:15px;
+ border-radius:12px;text-align:center;
+ box-shadow:0 5px 15px rgba(0,0,0,.08)
+}
+.products-grid{
+ display:grid;
+ grid-template-columns:repeat(3,1fr);
+ gap:10px;margin-top:20px;
+ max-height:70vh;overflow-y:auto
+}
+.product-card{
+ background:#fff;padding:5px;border-radius:10px;
+ text-align:center;cursor:pointer;
+ box-shadow:0 3px 8px rgba(0,0,0,.08)
+}
+.product-card img{
+ width:100%;height:80px;object-fit:cover;border-radius:8px
+}
+.product-card h4{font-size:12px;margin:5px 0}
+.price{font-size:12px;color:#16a34a;font-weight:600}
+.modal{
+ position:fixed;inset:0;
+ background:rgba(0,0,0,.5);
+ display:none;align-items:center;justify-content:center;
+ z-index:20
+}
+.modal-content{
+ background:#fff;padding:20px;
+ width:90%;max-width:500px;
+ border-radius:15px;max-height:85vh;overflow:auto;
+ position:relative
+}
+.close-btn,.buy-btn{
+ position:absolute;top:10px;
+ width:34px;height:34px;border-radius:50%;
+ display:flex;align-items:center;justify-content:center;
+ color:#fff;cursor:pointer
+}
+.close-btn{right:10px;background:#ef4444}
+.buy-btn{right:55px;background:#2563eb}
+input{
+ width:100%;padding:10px;margin:8px 0;
+ border-radius:8px;border:1px solid #ccc
+}
+button.primary{
+ background:#16a34a;color:#fff;border:none;
+ padding:10px 15px;border-radius:10px;cursor:pointer
+}
+img.full{width:100%;border-radius:10px;margin:10px 0}
+.order-status{
+ background:#f8fafc;padding:10px;border-radius:10px;margin-top:10px
+}
+.step{
+ font-size:12px;color:#999;margin:2px 0
+}
+.step.active{
+ color:#16a34a;font-weight:600
+}
+</style>
+</head>
+<body>
+<div class="main">
+ <div class="icon-bar">
+   <button class="icon-btn" onclick="loadProducts()"><i class="bi bi-search"></i></button>
+   <button class="icon-btn" onclick="openOrders()"><i class="bi bi-bag-check"></i></button>
+ </div>
+ <div class="header">
+   <h3>Retailer Dashboard</h3>
+ </div>
+ <div class="header">
+   <input id="wid" placeholder="Enter Wholesaler ID (full ID)">
+   <button class="primary" onclick="loadProducts()">Search</button>
+ </div>
+ <div class="products-grid" id="products"></div>
+</div>
 
-</div>  
-</div>  <!-- MY ORDERS MODAL -->  <div class="modal" id="ordersModal">  
-<div class="modal-content">  
- <div class="close-btn" onclick="closeAll()">✕</div>  
- <h3>My Orders</h3>  
- <div id="myOrders"></div>  
-</div>  
-</div>  
- <script>
+<!-- DETAIL MODAL -->
+<div class="modal" id="detailModal">
+ <div class="modal-content">
+   <div class="close-btn" onclick="closeAll()">✕</div>
+   <div class="buy-btn" onclick="openPayment()"><i class="bi bi-cart-plus"></i></div>
+   <h3 id="dName"></h3>
+   <img id="dImg" class="full">
+   <p id="dPrice" class="price"></p>
+   <p id="dDetail"></p>
+   <hr>
+   <p><b>Shop:</b> <span id="dShop"></span></p>
+   <p><b>Address:</b> <span id="dAddress"></span></p>
+   <p><b>Mobile / UPI:</b> <span id="dMobile"></span></p>
+ </div>
+</div>
+
+<!-- PAYMENT MODAL -->
+<div class="modal" id="payModal">
+ <div class="modal-content">
+   <h3>Payment & Proof</h3>
+   <p><b>Shop:</b> <span id="pShop"></span></p>
+   <p><b>UPI / Mobile:</b> <span id="pMobile"></span></p>
+   <img id="pImg" class="full">
+   <input id="rName" placeholder="Retailer Name">
+   <input id="rMobile" placeholder="Retailer Mobile">
+   <input id="txn" placeholder="Transaction ID">
+   <input id="proof" type="file" accept="image/*">
+   <button type="button" class="primary" onclick="submitOrder()">Submit Order</button>
+   <button type="button" onclick="closeAll()">Cancel</button>
+ </div>
+</div>
+
+<!-- MY ORDERS MODAL -->
+<div class="modal" id="ordersModal">
+ <div class="modal-content">
+   <div class="close-btn" onclick="closeAll()">✕</div>
+   <h3>My Orders</h3>
+   <div id="myOrders"></div>
+ </div>
+</div>
+
+<script>
 const API = "https://shopbacked-vmhs.onrender.com";
 const TOKEN = localStorage.getItem("token");
-
 let selectedProduct = null;
 
 /* ===== LOAD PRODUCTS FROM SERVER ===== */
@@ -132,38 +148,41 @@ async function loadProducts(){
  const wholesalerId = wid.value.trim();
  if(!wholesalerId) return alert("Enter Wholesaler ID");
 
- const res = await fetch(API+"/api/products/wholesaler/"+wholesalerId,{
-   headers:{ "Authorization":"Bearer "+TOKEN }
- });
- const data = await res.json();
+ try {
+   const res = await fetch(`${API}/api/products/wholesaler/${wholesalerId}`, {
+     headers: { "Authorization": "Bearer "+TOKEN }
+   });
+   const data = await res.json();
 
- if(!data.success){
-   products.innerHTML = "No products found";
-   return;
+   if(!data.success || !data.products.length){
+     products.innerHTML = "No products found";
+     return;
+   }
+
+   products.innerHTML = data.products.map(p=>`
+     <div class="product-card" onclick='showDetail(${JSON.stringify(p)})'>
+       <img src="${p.image}">
+       <h4>${p.productName}</h4>
+       <div class="price">₹${p.price}</div>
+     </div>
+   `).join("");
+
+ } catch(err){
+   console.log(err);
+   products.innerHTML = "Server error, try again";
  }
-
- products.innerHTML = data.products.map(p=>`
-  <div class="product-card" onclick='showDetail(${JSON.stringify(p)})'>
-   <img src="${p.image}">
-   <h4>${p.productName}</h4>
-   <div class="price">₹${p.price}</div>
-  </div>
- `).join("") || "No products";
 }
 
 /* ===== SHOW DETAIL ===== */
 function showDetail(p){
  selectedProduct = p;
-
  dName.innerText = p.productName;
  dImg.src = p.image;
  dPrice.innerText = "₹"+p.price;
  dDetail.innerText = p.detail;
-
  dShop.innerText = p.shopName;
  dMobile.innerText = p.mobile;
  dAddress.innerText = p.address;
-
  detailModal.style.display = "flex";
 }
 
@@ -175,19 +194,19 @@ function openPayment(){
  payModal.style.display = "flex";
 }
 
-/* ===== SUBMIT ORDER (SERVER) ===== */
+/* ===== SUBMIT ORDER ===== */
 async function submitOrder(){
- let name = rName.value;
- let mobile = rMobile.value;
- let txnId = txn.value;
- let proofFile = proof.files[0];
+ const name = rName.value.trim();
+ const mobile = rMobile.value.trim();
+ const txnId = txn.value.trim();
+ const proofFile = proof.files[0];
 
  if(!name || !mobile || !txnId || !proofFile){
-  alert("All fields required");
-  return;
+   alert("All fields required");
+   return;
  }
 
- let reader = new FileReader();
+ const reader = new FileReader();
  reader.onload = async ()=>{
    const body = {
      wholesalerId: selectedProduct.wholesalerId,
@@ -201,21 +220,25 @@ async function submitOrder(){
      proofImg: reader.result
    };
 
-   const res = await fetch(API+"/api/orders",{
-     method:"POST",
-     headers:{
-       "Content-Type":"application/json",
-       "Authorization":"Bearer "+TOKEN
-     },
-     body: JSON.stringify(body)
-   });
+   try {
+     const res = await fetch(`${API}/api/orders`,{
+       method:"POST",
+       headers:{
+         "Content-Type":"application/json",
+         "Authorization":"Bearer "+TOKEN
+       },
+       body: JSON.stringify(body)
+     });
 
-   const data = await res.json();
-   if(data.success){
-     alert("Order placed successfully ✅");
-     closeAll();
-   }else{
-     alert(data.message || "Order failed");
+     const data = await res.json();
+     if(data.success){
+       alert("Order placed successfully ✅");
+       closeAll();
+     } else alert(data.message || "Order failed");
+
+   } catch(err){
+     console.log(err);
+     alert("Server error, try again");
    }
  };
  reader.readAsDataURL(proofFile);
@@ -224,32 +247,38 @@ async function submitOrder(){
 /* ===== MY ORDERS ===== */
 async function openOrders(){
  ordersModal.style.display="flex";
-
- const mobile = rMobile.value;
+ const mobile = rMobile.value.trim();
  if(!mobile){
    myOrders.innerHTML="Enter mobile number first";
    return;
  }
 
- const res = await fetch(API+"/api/orders/retailer/"+mobile,{
-   headers:{ "Authorization":"Bearer "+TOKEN }
- });
- const data = await res.json();
+ try{
+   const res = await fetch(`${API}/api/orders/retailer/${mobile}`,{
+     headers:{ "Authorization":"Bearer "+TOKEN }
+   });
+   const data = await res.json();
 
- myOrders.innerHTML = data.orders.map(o=>`
-  <div class="order-status">
-   <b>${o.productName}</b> (₹${o.price})
-   <div class="step ${o.status==='pending'?'active':''}">● PENDING</div>
-   <div class="step ${o.status==='confirmed'?'active':''}">● CONFIRMED</div>
-   <div class="step ${o.status==='pickup'?'active':''}">● PICKUP</div>
-   <div class="step ${o.status==='delivered'?'active':''}">● DELIVERED</div>
-  </div>
- `).join("") || "No orders";
+   myOrders.innerHTML = data.orders.map(o=>`
+     <div class="order-status">
+       <b>${o.productName}</b> (₹${o.price})
+       <div class="step ${o.status==='pending'?'active':''}">● PENDING</div>
+       <div class="step ${o.status==='confirmed'?'active':''}">● CONFIRMED</div>
+       <div class="step ${o.status==='pickup'?'active':''}">● PICKUP</div>
+       <div class="step ${o.status==='delivered'?'active':''}">● DELIVERED</div>
+     </div>
+   `).join("") || "No orders";
+
+ } catch(err){
+   console.log(err);
+   myOrders.innerHTML = "Server error, try again";
+ }
 }
 
-/* ===== CLOSE ===== */
+/* ===== CLOSE ALL MODALS ===== */
 function closeAll(){
  document.querySelectorAll(".modal").forEach(m=>m.style.display="none");
 }
-</script>  </body>  
-</html>  
+</script>
+</body>
+</html>
