--- a/retailer.html
+++ b/retailer.html
@@ -188,6 +188,7 @@ function showDetail(p){
 
 /* ===== OPEN PAYMENT ===== */
 function openPayment(){
+ if(!selectedProduct) return alert("Select product first");
  pShop.innerText = selectedProduct.shopName;
  pMobile.innerText = selectedProduct.mobile;
  pImg.src = selectedProduct.image;
@@ -278,6 +279,7 @@ async function openOrders(){
 /* ===== CLOSE ALL MODALS ===== */
 function closeAll(){
  document.querySelectorAll(".modal").forEach(m=>m.style.display="none");
+ selectedProduct = null;
 }
 </script>
 </body>
